app/view/styles.css
/* ... */
.submit-button{
    margin: 20px;
    width: 180px;
    border-width: 0px;
    padding: 20px;
    line-height: 0px;
    font-size: 20px;
    border-radius: 8px;
    background-color:rgb(248, 159, 57);
    color: black;
}

.submit-button:hover,
.submit-button:focus{
    color:rgb(255, 248, 241);
    border-width: 0px;
    transition: 0.3s ease-out;
}

input:focus,
input:hover {
    border-color:rgb(248, 159, 57);
    color:rgb(248, 159, 57);
    outline: none;
    border-bottom-width: 3px;
    transition: 0.5s ease-out;
}

textarea{
    border-width: 3px;
    border-radius: 2px;
    border-style: solid;
    background-color: white;
    resize: none;
    height: 100px;
    padding: 10px;
    font-size: 1.5vw;
    width: 100%;
    display: inline-block;
}

.form-bottom{
    margin: 20px;
}

textarea:focus,
textarea:hover {
    border-color:rgb(248, 159, 57);
    color:rgb(248, 159, 57);
    outline: none;
    border-bottom-width: 4px;
    transition: 0.5s ease-out;
}

.favorites-details{
    height: calc(100vh - 90px);
    width: calc(100vw - 90px);
    position: fixed;
    text-align: left;
    z-index: 1;
    bottom: 20px;
    right: 20px;
    top: 70px;
    border-radius: 8px;
    background-color: rgb(66, 33, 1, 0.9);
    overflow-x: hidden;
    transition: ease;
    padding-left: 20px;
    padding-right: 20px;
}

.details{
    height: calc(100vh - 90px);
    width: calc(100vw - 425px);
    position: fixed;
    text-align: left;
    z-index: 1;
    bottom: 20px;
    right: 20px;
    top: 70px;
    border-radius: 8px;
    background-color: rgb(66, 33, 1, 0.9);
    overflow-x: hidden;
    transition: ease;
    padding-left: 20px;
    padding-right: 20px;
}

.close {
    width: 60px;
    height: 60px;
    margin-top: 14px;
    margin-right: -20px;
    position: fixed;
    right: 60px;
    transition: ease-in;
}

.details h1{
    font-size: 40px;
    color: white;
    float: left;
    text-align: left;
    margin-top: 10px;
    padding: 0;   
}

#custom-file-input::-webkit-file-upload-button {
  visibility: hidden;
}

#custom-file-input::before {
  content: 'Choose Your Photo';
  display: inline-block;
  margin-right: 80px;
  line-height: 20px;
  background: #f89f39;
  border-style: none;
  padding: 5px 8px;
  outline: none;
  height: 40px;
  white-space: nowrap;
  -webkit-user-select: none;
  cursor: pointer;
  margin-right: -40px;
  margin-left: 20px;
  font-size: 20px;
}

#cloudinary_upload {
  display: inline-block;
  margin-right: 80px;
  line-height: 20px;
  background: #f89f39;
  border-style: none;
  border-radius: 3px;
  padding: 5px 8px;
  outline: none;
  height: 40px;
  white-space: nowrap;
  -webkit-user-select: none;
  cursor: pointer;
  margin-left: 20px;
  font-size: 20px;
}

#custom-file-input:hover,
#custom-file-input:active,
#cloudinary_upload:hover,
#cloudinary_upload:active
{
 outline: black solid 2px;
}

.details-text{
    width: 60%;
}

.details-text h1{
    overflow-wrap: break-word;
    font-size: 60px;
    width: 50%; 
    padding: 15px;
    padding-right: 5px;
    font-weight: bolder;
    padding-left: 0;
    overflow: hidden;
}

.details ul{
    list-style: none;
    font-size: 20px;
    color: white;
    float: left;
    text-align: left;
    padding: 0;   
}

.details ul b{
    color: #FFB98B;
    font-size: 22px;
    line-height: 170%;
}

.fav-btn{
    position: fixed; 
    right: 30px; 
    bottom: 30px; 
    width: 100%; 
    text-align: right;
}

.close:after {
    content: '';
    height: 30px;
    border-left: 4px solid #fff;
    position: absolute;
    transform: rotate(45deg);
    left: 28px;
}

.close:before {
    content: '';
    height: 30px;
    border-left: 4px solid #fff;
    position: absolute;
    transform: rotate(-45deg);
    left: 28px;
}

.submit{
    background-color: black;
    color: white;
    padding: 0.75vw;
    font-size: 1.2vw;
    border-radius: 4px;
    border-width: 0px;
    position: relative;
    float: right;
    margin-right: 30px;
    margin-top: -10px;
}

.sidebar-submit:hover{
    background-color: #ffb98b;
    color: black;
    transition: 0.4s;
    border-style: none;
}

.sidebar-submit{
    background-color: black;
    color: white;
    padding: 20px;
    font-size: 20px;
    border-radius: 4px;
    border-width: 0px;
    line-height: 0px;
}

h1{
    text-align: center;
    width: 100%;
    font-size: 4vw;
}

.header {
    margin: none;
    background-color: #ffb98b;
    text-align: left;
    box-shadow: 2px 2px 10px 5px rgba(0, 0, 0, 0.2);
    height: 50px;
    width: 100%;
    padding: 10px;
    position: fixed;
    z-index: 20000;
}

.header a{
    text-decoration: none;
    color: black;
    font-size: 20px;
    margin-left: 20px;
    display: inline-block;
}

.header a:hover{
    color: white;
}

.title{
    float: right;
    padding-right: 20px;
    padding-top: 1px;
    font-size: 24px;
    font-weight: bolder;
}

.menu-button{
    font-size: 23px;
    cursor: pointer;
    color: black;
    display: inline-block;
}

.search-bar{
    background-color: white;
    border-width: 0px;
    border-style: solid;
    border-color: black;
    width: 80%;
    text-align: center;
    margin: 17px;
    height: 40px;
    border-radius: 4px;
    font-size: 22px;
}

#sortby option:hover{
    background-color: #FFB98B;
}

#sortby option:focus{
    outline: none;
    background-color: #EE9440;
}

#sortby {
    padding: 10px;
    border-style: none;
    border-radius: 5px;
}

#sortby option{
    color: black;
    font-size: 18px;
}
.search-bar:hover{
    border-style: none;
}

.search-bar:focus::placeholder {
    color: transparent;
  }

::placeholder{
    opacity: 1;
    color: black;
}

.flexer{
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin-right: 2vw;
    margin-left: 2vw;
    flex-wrap: wrap;
}

h2::first-letter{
    font-size: 90px;    
}
/* ... */

